--- a/kicks/templates/kicks/index.html
+++ b/kicks/templates/kicks/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MODELS</title>
 </head>
 <body>
     {% for user in users %}
